Update weekly log

--- a/WeeklyLogs/Log092224_092824.md
+++ b/WeeklyLogs/Log092224_092824.md
@@ -41,6 +41,15 @@ Figure 5: Previous v2 grid run WITH fixed weir.<br>
 ![Job19936754](../Figures/092424meeting/Job20964694_TMDv2_waterlevels.gif)<br>
 Figure 6: New v2 grid run WITHOUT fixed weir.<br>
 
+*WITH fixed weir
+- DOES simulate sustained elevated water level signal at Montesano really well (for both January 2022 and December 2023)
+- Chehalis River Surge Plain AND Montesano is flooded for multiple tidal cycles during rising discharge rates and elevated water levels
+
+*WITHOUT fixed weir
+- Does NOT simulate sustained elevated water level signal at Montesano
+- Complete flushing of the Chehalis River Surge Plain
+- Montesano floods momentarily but drains on next tidal cycle
+
 
 ## Issues:
 - Figure out what to do with fixed weir and whether it affects system
