Update weekly log

--- a/WeeklyLogs/Log092924_100524.md
+++ b/WeeklyLogs/Log092924_100524.md
@@ -16,6 +16,8 @@
 - Comparisons between the v4 grid WITH the fixed weir (Fig. 1) and WITHOUT the fixed weir (Fig. 2)
 - Water levels lowered due to water spilling over to the floodplain instead of confined within the channel previously due to the fixed weir
 - Water levels are still significantly damped
+- Water levels at Porter is offset by a constant ~4.5m for run WITHOUT weir
+	- Agrees with our correction of ~5m difference between the elevation at USGS Porter station and our model's Porter station
 
 ![Job20676065](../Figures/091724meeting/Job20676065_TMDv4_waterlevels.png)<br>
 Figure 1: Water level comparisons for grid v4 (TMD) for December 2023 storm WITH the fixed weir.<br>
@@ -29,6 +31,7 @@ Figure 2: Water level comparisons for grid v4 (TMD) for December 2023 storm WITH
 - Simulated water levels do better than v5.1 and v5.4 (upstream 15m, downstream 2m)
 - HOWEVER, it will be difficult to justify the addition of the fixed weir in our model
 - Comparisons between the v5.5 grid WITH the fixed weir (Fig. 3) and WITHOUT the fixed weir (Fig. 4)
+- Again, water levels between USGS gauge at Porter and our measured Porter discharge work well with a constant using the model WITHOUT the fixed weir
 
 ![Job20882909](../Figures/091724meeting/Job20882909_TMDv5.5_waterlevels.png)<br>
 Figure 3: Water level comparisons for grid v5.5 (TMD) for December 2023 storm WITHOUT the fixed weir.<br>
@@ -38,3 +41,18 @@ Figure 4: Water level comparisons for grid v5.5 (TMD) for December 2023 storm WI
 
 
 ### 3) Channel discharge
+- Originally wanted to look at discharge along channel upstream of Montesano to look for leaks in the fixed weir model runs
+- Animation of model run (v4) with (Fig. 5) and without fixed weir (Fig. 7) looking at upstream channel (Fig. 5)
+- Discharge at 20 different cross sections (~1km apart) is plotted for runs with weir (Fig. 6) and without the weir (Fig. 8) for model run with v4 grid
+
+![Job20676065 gif](../Figures/100324meeting/Job20676065_TMDv4.gif)<br>
+Figure 5: Animation of upstream of Montesano for model run (v4) WITH the fixed weir.<br>
+
+![Job20676065 discharge](../Figures/100324meeting/Job20676065_TMDv4.png)<br>
+Figure 6: Discharge of 20 transects for model run (v4) WITH the fixed weir.<br>
+
+![Job21023006 gif](../Figures/100324meeting/Job21023006_TMDv4.gif)<br>
+Figure 7: Animation of upstream of Montesano for model run (v4) WITHOUT the fixed weir.<br>
+
+![Job21023006 discharge](../Figures/100324meeting/Job21023006_TMDv4_discharge.png)<br>
+Figure 8: Discharge of 20 transects for model run (v4) WITHOUT the fixed weir.<br>
