Update weekly log

--- a/WeeklyLogs/Log092924_100524.md
+++ b/WeeklyLogs/Log092924_100524.md
@@ -48,11 +48,11 @@ Figure 4: Water level comparisons for grid v5.5 (TMD) for December 2023 storm WI
 ![Job20676065 gif](../Figures/100324meeting/Job20676065_TMDv4.gif)<br>
 Figure 5: Animation of upstream of Montesano for model run (v4) WITH the fixed weir.<br>
 
-![Job20676065 discharge](../Figures/100324meeting/Job20676065_TMDv4.png)<br>
+![Job20676065 discharge](../Figures/100324meeting/Job20676065_TMDv4.jpg)<br>
 Figure 6: Discharge of 20 transects for model run (v4) WITH the fixed weir.<br>
 
 ![Job21023006 gif](../Figures/100324meeting/Job21023006_TMDv4.gif)<br>
 Figure 7: Animation of upstream of Montesano for model run (v4) WITHOUT the fixed weir.<br>
 
-![Job21023006 discharge](../Figures/100324meeting/Job21023006_TMDv4_discharge.png)<br>
+![Job21023006 discharge](../Figures/100324meeting/Job21023006_TMDv4_discharge.jpg)<br>
 Figure 8: Discharge of 20 transects for model run (v4) WITHOUT the fixed weir.<br>
