Update weekly log

--- a/WeeklyLogs/Log092924_100524.md
+++ b/WeeklyLogs/Log092924_100524.md
@@ -41,18 +41,33 @@ Figure 4: Water level comparisons for grid v5.5 (TMD) for December 2023 storm WI
 
 
 ### 3) Channel discharge
-- Originally wanted to look at discharge along channel upstream of Montesano to look for leaks in the fixed weir model runs
-- Animation of model run (v4) with (Fig. 5) and without fixed weir (Fig. 7) looking at upstream channel (Fig. 5)
-- Discharge at 20 different cross sections (~1km apart) is plotted for runs with weir (Fig. 6) and without the weir (Fig. 8) for model run with v4 grid
+- Originally wanted to look at discharge along channel upstream of Montesano to look for leaks in the fixed weir model runs (Fig. 5)
+- Animation of model run (v4) with (Fig. 6) and without fixed weir (Fig. 8) looking at upstream channel
+- Discharge at 20 different cross sections (~1km apart) is plotted for runs with weir (Fig. 7) and without the weir (Fig. 9) for model run with v4 grid
+- Tidal influence seems to reach up to cross-section around 12 and 13 (outlet of Satsop River)
+	- Transect 17 is dry (channel/flooded regions do not match Google maps)
+
+![Discharge coordinates](../Figures/100324meeting/Discharge_coordinates.png)<br>
+Figure 5: Map of discharge transects upstream of Montesano.<br>
 
 ![Job20676065 gif](../Figures/100324meeting/Job20676065_TMDv4.gif)<br>
-Figure 5: Animation of upstream of Montesano for model run (v4) WITH the fixed weir.<br>
+Figure 6: Animation of upstream of Montesano for model run (v4) WITH the fixed weir.<br>
 
 ![Job20676065 discharge](../Figures/100324meeting/Job20676065_TMDv4_discharge.jpg)<br>
-Figure 6: Discharge of 20 transects for model run (v4) WITH the fixed weir.<br>
+Figure 7: Discharge of 20 transects for model run (v4) WITH the fixed weir.<br>
 
 ![Job21023006 gif](../Figures/100324meeting/Job21023006_TMDv4.gif)<br>
-Figure 7: Animation of upstream of Montesano for model run (v4) WITHOUT the fixed weir.<br>
+Figure 8: Animation of upstream of Montesano for model run (v4) WITHOUT the fixed weir.<br>
 
 ![Job21023006 discharge](../Figures/100324meeting/Job21023006_TMDv4_discharge.jpg)<br>
-Figure 8: Discharge of 20 transects for model run (v4) WITHOUT the fixed weir.<br>
+Figure 9: Discharge of 20 transects for model run (v4) WITHOUT the fixed weir.<br>
+
+
+## Next steps:
+- Find thalweg along channel to give correct:
+	- Discharge
+	- SSH
+	- Water depth
+- Run newer grid:
+	- Increasing bed height at Montesano to elevate v5.5 water levels?
+	- Opposite: increase depth at Montesano and have transition slope further upstream to decrease dampening of tides in v4 grid?
