Update weekly log

--- a/WeeklyLogs/Log092924_100524.md
+++ b/WeeklyLogs/Log092924_100524.md
@@ -3,7 +3,8 @@
 ## Summary:
 1) DFM model (v4) with no weir simulated magnitude of elevated water levels, but had a damped signal 
 2) DFM model (v5.5) with weir simulated magnitude of elevated water levels better, but still had damped signal for initial period of storm (better than v4 no weir)
-3) Sections upstream of Montesano are left dry the entire model run (seen in both model runs with AND without fixed weir)
+3) Tidal influence seems to stop around Satrap River discharge point
+4) Results of model runs WITHOUT the fixed weir seem more realistic upstream, as flooding in the tidal surge plain and agricultural fields are flushed by tidal cycles  
 
 ## To do:
 1) Run DFM model (v4) with NO weir
