Update weekly log

--- a/WeeklyLogs/Log092924_100524.md
+++ b/WeeklyLogs/Log092924_100524.md
@@ -72,3 +72,5 @@ Figure 9: Discharge of 20 transects for model run (v4) WITHOUT the fixed weir.<b
 - Run newer grid:
 	- Increasing bed height at Montesano to elevate v5.5 water levels?
 	- Opposite: increase depth at Montesano and have transition slope further upstream to decrease dampening of tides in v4 grid?
+- Prep for CoPes Pilot Project meeting
+- Think about format/material for CoPes Team 2 meeting (10/22/24)
