--- a/WeeklyLogs/Log100624_101224.md
+++ b/WeeklyLogs/Log100624_101224.md
@@ -86,10 +86,8 @@ Figure 17: Cross channel water depth profile (Transect 13).
 	- shapefiles
 	- 
 
-
-
 ## Issues:
-
+- Transects at certain points (9, 11) are dry until storm arrival (Dec. 05)
 
 
 ## To do:
