Update weekly log

--- a/WeeklyLogs/Log100624_101224.md
+++ b/WeeklyLogs/Log100624_101224.md
@@ -8,8 +8,7 @@
 ## To do:
 1) Run model (TMD) with v4 grid including new observation and discharge points
 2) Cross-section profiles
-3) Along-channel profiles
-4) Team 2 meeting presentation 
+3) Team 2 meeting presentation ideas
 
 
 ## Results:
@@ -26,7 +25,6 @@ Figure 1: Map of max inundation (Dec. 07, 2023 T06:00) with cross sectional tran
 - Plotted discharge for each transect (Fig. 3)
 - Plotted cumulative discharge for each transect (Fig. 4)
 - Plotted cross channel water depth profile for each transect (Fig. 5-17)
-
 
 ![Cross sectional area](../Figures/101024meeting/Job21216554_TMDv4_transectarea.png)<br>
 Figure 2: Cross sectional area for all transects (13).
@@ -81,13 +79,16 @@ Figure 17: Cross channel water depth profile (Transect 13).
 - Background + motivation
 - Model grid/development
 - Flood map/animation
-- Thoughts on what to include as products
+- Discussion on what planners, scientists, communities can use the output for?
 	- % inundated relative to MHW
 	- shapefiles
-	- 
+
 
 ## Issues:
 - Transects at certain points (9, 11) are dry until storm arrival (Dec. 05)
 
 
 ## To do:
+- Run model with different grid version and compare cross channel profiles, discharge, and along-channel profile
+- Start presentation for Team 2 meeting
+- Brainstorm more ideas for Winter Storms Forum
