Update weekly log

--- a/WeeklyLogs/Log101324_101924.md
+++ b/WeeklyLogs/Log101324_101924.md
@@ -9,44 +9,74 @@
 
 
 ## Results:
-# 1) Discharge for main channel
-- 
+### 1) Water depths, cross sectional area, discharge for Chehalis River main channel
+- Map of Chehalis River with transects plotted for the main channel (Fig. 1)
+	- Transect much smaller but do well at representing the main channel of the Chehalis
+- Cross sectional area for all 13 transects from December 1-12, 2023 (Fig. 2)
+	- Modulating cross sectional area for transects 1-10 for the first ~5 days can be described by the extent of tidal influence
+	- Cross sectional area remains elevated for longer duration in transects 9 to 12 due to lack of tidal flushing
+- Modulations in total discharge are evident transects 1-9 due to the tidal influence (Fig. 3)
+	- Interestingly, discharge drops abruptly right after the peak on late December 05 for transect 11 (can be seen in transect 12 slightly as well)
+	- Discharge at transect 13 follows the Montesano discharge rate until late December 5, where the discharge begins to become underestimated. This shows that water levels have potentially spilled over bank and inundated the floodplain, which can be seen in last week's plots where discharge along the floodplain made up for the difference in discharge.
+- Cumulative discharge shows downstream transects flush larger volumes of water later in the time series (Fig. 4)
+
+![Transect map](../Figures/101724meeting/Job21399902_TMDv4_transectmap.png)<br>
+Figure 1: Map of max inundation (Dec. 07, 2023 T06:00) with cross sectional transects (13).
+
+![Cross sectional area](../Figures/101024meeting/Job21399902_TMDv4_transectarea.png)<br>
+Figure 2: Cross sectional area for all transects (13).
+
+![Discharge](../Figures/101724meeting/Job21399902_TMDv4_transectdischarge.png)<br>
+Figure 3: Discharge for all transects (13).
+
+![Cumulative discharge](../Figures/101724meeting/Job21399902_TMDv4_transectcumdischarge.png)<br>
+Figure 4: Cumulative discharge for all transects (13).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH01.png)<br>
-Figure 1: Cross channel water depth profile (Transect 1).
+Figure 5: Cross channel water depth profile (Transect 1).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH02.png)<br>
-Figure 2: Cross channel water depth profile (Transect 2).
+Figure 6: Cross channel water depth profile (Transect 2).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH03.png)<br>
-Figure 3: Cross channel water depth profile (Transect 3).
+Figure 7: Cross channel water depth profile (Transect 3).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH04.png)<br>
-Figure 4: Cross channel water depth profile (Transect 4).
+Figure 8: Cross channel water depth profile (Transect 4).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH05.png)<br>
-Figure 5: Cross channel water depth profile (Transect 5).
+Figure 9: Cross channel water depth profile (Transect 5).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH06.png)<br>
-Figure 6: Cross channel water depth profile (Transect 6).
+Figure 10: Cross channel water depth profile (Transect 6).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH07.png)<br>
-Figure 7: Cross channel water depth profile (Transect 7).
+Figure 11: Cross channel water depth profile (Transect 7).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH08.png)<br>
-Figure 8: Cross channel water depth profile (Transect 8).
+Figure 12: Cross channel water depth profile (Transect 8).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH09.png)<br>
-Figure 9: Cross channel water depth profile (Transect 9).
+Figure 13: Cross channel water depth profile (Transect 9).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH10.png)<br>
-Figure 10: Cross channel water depth profile (Transect 1).
+Figure 14: Cross channel water depth profile (Transect 1).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH11.png)<br>
-Figure 11: Cross channel water depth profile (Transect 11).
+Figure 15: Cross channel water depth profile (Transect 11).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH12.png)<br>
-Figure 12: Cross channel water depth profile (Transect 12).
+Figure 16: Cross channel water depth profile (Transect 12).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH13.png)<br>
-Figure 13: Cross channel water depth profile (Transect 13).
+Figure 17: Cross channel water depth profile (Transect 13).
+
+## Issues:
+- Cross section velocity output for all transects were 0 (Fig. 18)
+![Cross channel velocity](../Figures/101724meeting/Job21399902_TMDv4_transectvel.png)<br>
+Figure 18: Cross sectionally averaged velocity for each transect.
+
+## To do:
+- Run model with different grid version and compare cross channel profiles, discharge, and along-channel profile
+- Put cross sections along Wynoochee and Satsop
+- Calculate difference in discharge between floodplain cross sections and channel cross sections for determining how much water is leaked into the floodplains
