Update weekly log

--- a/WeeklyLogs/Log101324_101924.md
+++ b/WeeklyLogs/Log101324_101924.md
@@ -19,6 +19,9 @@
 	- Interestingly, discharge drops abruptly right after the peak on late December 05 for transect 11 (can be seen in transect 12 slightly as well)
 	- Discharge at transect 13 follows the Montesano discharge rate until late December 5, where the discharge begins to become underestimated. This shows that water levels have potentially spilled over bank and inundated the floodplain, which can be seen in last week's plots where discharge along the floodplain made up for the difference in discharge.
 - Cumulative discharge shows downstream transects flush larger volumes of water later in the time series (Fig. 4)
+- Cross-section water depth profiles for transects 1-13 (Fig. 5-17)
+	- From transects 1-9, we can see the widening and narrowing of the channel due to the tidal cycle prior to December 5
+	- 
 
 ![Transect map](../Figures/101724meeting/Job21399902_TMDv4_transectmap.png)<br>
 Figure 1: Map of max inundation (Dec. 07, 2023 T06:00) with cross sectional transects (13).
