Update weekly log

--- a/WeeklyLogs/Log101324_101924.md
+++ b/WeeklyLogs/Log101324_101924.md
@@ -19,7 +19,12 @@
 	- Interestingly, discharge drops abruptly right after the peak on late December 05 for transect 11 (can be seen in transect 12 slightly as well)
 	- Discharge at transect 13 follows the Montesano discharge rate until late December 5, where the discharge begins to become underestimated. This shows that water levels have potentially spilled over bank and inundated the floodplain, which can be seen in last week's plots where discharge along the floodplain made up for the difference in discharge.
 - Cumulative discharge shows downstream transects flush larger volumes of water later in the time series (Fig. 4)
-- Cross-section water depth profiles for transects 1-13 (Fig. 5-17)
+- Cross section velocity was calculated from cross section discharge/cross section area (Fig. 5)
+	- Maximum velocity magnitude is ~2 m/s at transect 9
+	- Transects 1-8 have >1 instance of velocity <0, which indicates inflow (from tides)
+	- Velocity at transects 9-13 are always >0 m/s, indicating outflow for the entire time series
+	- Velocity reaches magnitudes of 2 m/s  at transect 9
+- Cross-section water depth profiles for transects 1-13 (Fig. 6-18)
 	- From transects 1-9, we can see the widening and narrowing of the channel due to the tidal cycle prior to December 5
 
 ![Transect map](../Figures/101724meeting/Job21399902_TMDv4_transectmap.png)<br>
@@ -34,49 +39,48 @@ Figure 3: Discharge for all transects (13).
 ![Cumulative discharge](../Figures/101724meeting/Job21399902_TMDv4_transectcumdischarge.png)<br>
 Figure 4: Cumulative discharge for all transects (13).
 
+![Cross channel velocity](../Figures/101724meeting/Job21399902_TMDv4_transectvel_derived.png)<br>
+Figure 5: Cross sectionally averaged velocity for each transect.
+
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH01.png)<br>
-Figure 5: Cross channel water depth profile (Transect 1).
+Figure 6: Cross channel water depth profile (Transect 1).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH02.png)<br>
-Figure 6: Cross channel water depth profile (Transect 2).
+Figure 7: Cross channel water depth profile (Transect 2).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH03.png)<br>
-Figure 7: Cross channel water depth profile (Transect 3).
+Figure 8: Cross channel water depth profile (Transect 3).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH04.png)<br>
-Figure 8: Cross channel water depth profile (Transect 4).
+Figure 9: Cross channel water depth profile (Transect 4).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH05.png)<br>
-Figure 9: Cross channel water depth profile (Transect 5).
+Figure 10: Cross channel water depth profile (Transect 5).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH06.png)<br>
-Figure 10: Cross channel water depth profile (Transect 6).
+Figure 11: Cross channel water depth profile (Transect 6).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH07.png)<br>
-Figure 11: Cross channel water depth profile (Transect 7).
+Figure 12: Cross channel water depth profile (Transect 7).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH08.png)<br>
-Figure 12: Cross channel water depth profile (Transect 8).
+Figure 13: Cross channel water depth profile (Transect 8).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH09.png)<br>
-Figure 13: Cross channel water depth profile (Transect 9).
+Figure 14: Cross channel water depth profile (Transect 9).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH10.png)<br>
-Figure 14: Cross channel water depth profile (Transect 1).
+Figure 15: Cross channel water depth profile (Transect 1).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH11.png)<br>
-Figure 15: Cross channel water depth profile (Transect 11).
+Figure 16: Cross channel water depth profile (Transect 11).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH12.png)<br>
-Figure 16: Cross channel water depth profile (Transect 12).
+Figure 17: Cross channel water depth profile (Transect 12).
 
 ![Cross channel water depth](../Figures/101724meeting/Job21399902_TMDv4_CH13.png)<br>
-Figure 17: Cross channel water depth profile (Transect 13).
+Figure 18: Cross channel water depth profile (Transect 13).
 
-## Issues:
-- Cross section velocity output for all transects were 0 (Fig. 18)
-![Cross channel velocity](../Figures/101724meeting/Job21399902_TMDv4_transectvel.png)<br>
-Figure 18: Cross sectionally averaged velocity for each transect.
 
 ## To do:
 - Run model with different grid version and compare cross channel profiles, discharge, and along-channel profile
