Update weekly log

--- a/WeeklyLogs/Log101324_101924.md
+++ b/WeeklyLogs/Log101324_101924.md
@@ -30,7 +30,7 @@
 ![Transect map](../Figures/101724meeting/Job21399902_TMDv4_transectmap.png)<br>
 Figure 1: Map of max inundation (Dec. 07, 2023 T06:00) with cross sectional transects (13).
 
-![Cross sectional area](../Figures/101024meeting/Job21399902_TMDv4_transectarea.png)<br>
+![Cross sectional area](../Figures/101724meeting/Job21399902_TMDv4_transectarea.png)<br>
 Figure 2: Cross sectional area for all transects (13).
 
 ![Discharge](../Figures/101724meeting/Job21399902_TMDv4_transectdischarge.png)<br>
@@ -86,3 +86,4 @@ Figure 18: Cross channel water depth profile (Transect 13).
 - Run model with different grid version and compare cross channel profiles, discharge, and along-channel profile
 - Put cross sections along Wynoochee and Satsop
 - Calculate difference in discharge between floodplain cross sections and channel cross sections for determining how much water is leaked into the floodplains
+- Compare discharge output to Yingzhong's discharge script that extracts discharge from two cross channel end points
