Update weekly log

--- a/WeeklyLogs/Log102024_102624.md
+++ b/WeeklyLogs/Log102024_102624.md
@@ -13,10 +13,15 @@ Figure 1: Winter Storms Forum DSWx BWTR map (v1).
 
 ### 2) DSWx water layers
 - Sifted through DSWx-HLS (optical) records and found many images for Twin Harbors, but always had cloud cover during storm events (e.g. Dec. 2023) (Fig. 2)
-- Sifted through DSWx-S1 (radar) records which have images starting on 09-16-2024 in Twin Harbors (Fig. 3)
+- Sifted through DSWx-S1 (radar) records which have images starting on 09-16-2024 in Twin Harbors (Fig. 3,4)
 - There exist recent images that show the benefits of having the radar product, showing surface water extent without any influence of cloud cover
-	- Optical image on 09-21-2024T191009Z (Fig. 4)
-	- Radar image on 09-21-2024T021106Z (Fig. 5)
+	- Optical image on 09-21-2024T191009Z (Fig. 5)
+	- Radar image on 09-21-2024T021106Z (Fig. 6)
+- Visualizing water layers from .tif files
+	- Water layer (WTR) shows: 1) Open Water, 2) Partial Surface Water, 3) Snow/Ice, 4) Cloud/Cloud Shadow (unsure what 'Reserved' is) (Fig. 7) 
+	- Binary water layer (BWTR) merges 'open water' and 'partial surface water' pixels together (Fig. 8)
+	- Confidence layer (CONF) shows confidence for each classification (Fig. 9)
+
 
 ![DSWx map](../Figures/102424meeting/OPERA_L3_DSWx-HLS_T10TDS_20231211T191811Z_20231213T151005Z_S2A_30_v1.0_BROWSE.png)<br>
 Figure 2: Twin Harbors optical image on December 13, 2023.
@@ -32,6 +37,15 @@ Figure 5: Optical image on September 21, 2024.
 
 ![DSWx map](../Figures/102424meeting/OPERA_L3_DSWx-S1_T10TDT_20240921T021106Z_20240921T160020Z_S1A_30_v1.0_BROWSE.png)<br>
 Figure 6: Radar image on September 21, 2024.
+
+![DSWx map](../Figures/102424meeting/B01_WTR_2024-09-21T154703Z.png)<br>
+Figure 7: Water layer on September 21, 2024.
+
+![DSWx map](../Figures/102424meeting/B02_WTR_2024-09-21T154703Z.png)<br>
+Figure 8: Binary water layer on September 21, 2024.
+
+![DSWx map](../Figures/102424meeting/CONF_WTR2024-09-21T154703Z.png)<br>
+Figure 9: Confidence layer on September 21, 2024.
 
 
 ## To do:
