Update weekly log

--- a/WeeklyLogs/Log102624_110224.md
+++ b/WeeklyLogs/Log102624_110224.md
@@ -53,6 +53,12 @@ Figure 3: (a) M2 tidal signal with colored dots corresponding to hours. (b) Alon
 Figure 4: Relationship between d_eta (eta_head - eta_mouth) and the M2 tidal signal.
 
 
+## Issues:
+- Tides were more amplified for shallow depths (<5m) and conversely less amplified with deeper depths (~20m)
+	- Compared to literature where convergence was dominant in long and deep-converging channels resulting in amplified tidal range
+	- Conversely, bottom friction is generally dominant in shallow converging channels resulting in a damped tidal range
+
+
 ## Next Steps:
 - Continue analytical model
 	- Adapt to account for converging depth
