Update weekly log

--- a/WeeklyLogs/Log110324_110924.md
+++ b/WeeklyLogs/Log110324_110924.md
@@ -7,7 +7,7 @@
 ### 1) Varying depth (for Lb = 8100)
 - Mouth and head water levels for varying depths (5m, 10m, 15m, 20m, 30m) - Fig. 1
 
-[Eta over depths](../Figures/110724meeting/headvmouth_comparisons_Lb8100.png)<br>
+![Eta over depths](../Figures/110724meeting/headvmouth_comparisons_Lb8100.png)<br>
 Figure 1: Eta at the mouth and head for different depths.
 
 
@@ -15,7 +15,7 @@ Figure 1: Eta at the mouth and head for different depths.
 	- Wavelength for most depths are on the order of 100-400km, except for 15m (extremely large, 10^3)
 	- 
 
-[Comparing parameters](../Figures/110724meeting/modelparameters_comparisons_Lb8100.png)<br>
+![Comparing parameters](../Figures/110724meeting/modelparameters_comparisons_Lb8100.png)<br>
 Figure 2: Comparisons between parameters in analytic solution.
 
 
