Update weekly log

--- a/WeeklyLogs/Log110324_110924.md
+++ b/WeeklyLogs/Log110324_110924.md
@@ -4,6 +4,14 @@
 1) Analytical model
 
 ## Results:
+### Equations for analytical model
+
+![Solutions](../Figures/110724meeting/convergingchannel_solutions.png)<br>
+![Wavenumber](../Figures/110724meeting/wavenumber_eqn)<br>
+![Frictioncoeff](../Figures/110724meeting/frictioncoefficient_eqn)<br>
+![Dampingcoeff](../Figures/110724meeting/dampingcoefficient_eqn)<br>
+
+
 ### 1) Varying depth (for Lb = 8100)
 - Mouth and head water levels for varying depths (5m, 10m, 15m, 20m, 30m) - Fig. 1
 	- Phase shift for all cases, but only reasonable for H=5m,10m case
