--- a/WeeklyLogs/Log110324_110924.md
+++ b/WeeklyLogs/Log110324_110924.md
@@ -7,9 +7,9 @@
 ### Equations for analytical model
 
 ![Solutions](../Figures/110724meeting/convergingchannel_solutions.png)<br>
-![Wavenumber](../Figures/110724meeting/wavenumber_eqn)<br>
-![Frictioncoeff](../Figures/110724meeting/frictioncoefficient_eqn)<br>
-![Dampingcoeff](../Figures/110724meeting/dampingcoefficient_eqn)<br>
+![Wavenumber](../Figures/110724meeting/wavenumber_eqn.png)<br>
+![Frictioncoeff](../Figures/110724meeting/frictioncoefficient_eqn.png)<br>
+![Dampingcoeff](../Figures/110724meeting/dampingcoefficient_eqn.png)<br>
 
 
 ### 1) Varying depth (for Lb = 8100)
