Update weekly log

--- a/WeeklyLogs/Log110324_110924.md
+++ b/WeeklyLogs/Log110324_110924.md
@@ -35,12 +35,12 @@ Figure 2: Comparisons between parameters in analytic solution.
 Table 1: Comparisons between parameters for different depths (Lb=8100).
 
 
-- Looked at along channel eta and u for varying depths
+- Looked at along channel eta and u for varying depths (Fig. 3)
 	- Eta is relatively flat (small along channel change) for H-15m (Fig. 3)
 
 
-![Eta hovemoller](../Figures/110724meeting/alongchanneleta_h15_Lb8100.png)<br>
-Figure 2: Along channel eta over time for H=15m.
+![Eta hovmoller](../Figures/110724meeting/alongchanneleta_h15_Lb8100.png)<br>
+Figure 3: Along channel eta over time for H=15m.
 
 
 ## 2) Varying width convergence
@@ -52,7 +52,7 @@ Figure 2: Along channel eta over time for H=15m.
 ![Eta over depths](../Figures/110724meeting/headvmouth_comparisons_Lb3000.png)<br>
 Figure 4: Eta at the mouth and head for different depths (Lb=3000).
 
-- Parameters (wavenumber/wavelength, friction coefficient, damping coefficient, and phase lead) for varying depths - Fig. 5, Table 2
+- Parameters (wavenumber/wavelength, friction coefficient, damping coefficient, and phase lead) for varying depths - Table 2
 	- Wavelength for most depths are on the order of 100-400km and increases with depth, with the exception of 15m (extremely large, 10^3)
 	- Friction coefficient (m) for most depths are on the same order O(-3) except for depth of 15m O(-4)
 	- Damping coefficient becomes smaller with increasing depth (as expected)
@@ -62,11 +62,26 @@ Figure 4: Eta at the mouth and head for different depths (Lb=3000).
 ![Comparing parameters (table)](../Figures/110724meeting/modelparameters_comparisontable_Lb3000.png)<br>
 Table 2: Comparisons between parameters for different depths (Lb=3000).
 
+## 3) Dimensionless width scale for amplification/damping
+- Compared results for Lb=3000 with Van Rijn's (2011) figure of dimensionless width scale vs. 'Beta/(2u)', 'c/co', and 'phi' (Fig. 5)
+	- Chose Lb=3000 because Lb=8100 does not fit into Van Rijn's (2011) figure
+- For H=15m, c/co = 4, so should be in amplification regime (but is NOT)
+	- Phi also falls outside that range
+- For H=5m, should be damping b/c Lb/ho = 6000
+	- But signal shows amplification
+
+
+![Van Rijn's figure](../Figures/110724meeting/VanRijns_amplificationdamping.png)<br>
+Figure 5: Van Rijn's amplification/damping regime for funnel-type estuary (exponential width).
+
+![Dimensionless width scale](../Figures/110724meeting/dimensionlesswidthscale_Lb3000.png)<br>
+Figure 6: Amplification/damping regimes for dimensionless width scale (Lb=3000).
+
 ## Issues:
 - Phase shift issue (especially at H=15m)
 - Wavenumber/wavelength issue (especially at H=15m)
 - Inflection point somewhere between 10m, 15m, and 20m
-
+- Comparisons not aligning with Van Rijn's figure for dimensionless width scale
 
 ## Next Steps:
 - Compare parameter values with other literature
