--- a/WeeklyLogs/Log111724_112324.md
+++ b/WeeklyLogs/Log111724_112324.md
@@ -1,7 +1,7 @@
 # November 17 - 23, 2024
 
 ## Summary:
-1) Analytical model
+- Analytical model
 
 ## Results:
 ### Added in amplification and damping regimes
@@ -43,6 +43,10 @@ Figure 4: Epsilon, mu, and e^(epsilon) for L_b=8142, h_o=15m.
 
 ![Param2](../Figures/112124meeting/m_c_co_k_lambda_phi_vel1_h15_Lb8000.png)<br>
 Figure 5: c, c_o, k, lambda, and phi for L_b=8142, h_o=15m.
+
+## Issues:
+- Varying L_b doesn't always match regime
+	- Increasing L_b where it's still amplified results in damped tidal range (unless I choose extremely large L_b)
 
 ## Next steps:
 - Continue working on matching Van Rijn's Scheldt Estuary results
